fix: Correcao para leitura em UTF-8